# libpo32

./: .clang-format  .gitignore  .gitmessage  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  build-decode-out-libpo32  codecov.yml
.githooks/: commit-msg  pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: commit-messages.yml  coverage.yml  format.yml  pr-titles.yml  static-analysis.yml  tests.yml
bindings/go/: builder.go  callback.go  cgo_patch_import.go  cgo_po32.go  cgo_synth.go  codec.go  constants.go  convert.go  decode.go  doc.go  errors.go  go.mod  params.go  pattern.go  po32_test.go  protocol.go  render.go  synth.go  trampoline.c  types.go
core/: CMakeLists.txt
core/docs/: ARCHITECTURE.md  BINDINGS.md  C_API.md  PROTOCOL.md
core/examples/: README.md  po32_decode_capture.c  po32_demo.c  po32_example.c
core/include/: po32.h  po32_synth.h
core/src/: po32.c  po32_lut.h  po32_patch_import.c  po32_synth.c
core/tests/: test_core.c  test_core_internal.c  test_example_pattern_editor.c  test_example_roundtrip_cli.c  test_patch_import_internal.c  test_synth.c
core/tests/cmake/: run_decode_capture_smoke.cmake  run_pattern_editor_smoke.cmake
docs/: ARCHITECTURE.md  C_API.md  PATCH_PARAMETERS.md  PROTOCOL.md  SYNTH.md
examples/: README.md  po32_decode_capture.c  po32_demo.c  po32_example.c  po32_pattern_editor.c
include/: po32.h  po32_synth.h
scripts/: check-commit-message.sh  check-conventional-subject.sh  check-version-sync.sh  ci-coverage.sh  ci-format.sh  ci-static-analysis.sh  ci-verify.sh  install-git-hooks.sh
src/: po32.c  po32_lut.h  po32_patch_import.c  po32_synth.c  po32_synth_tables.h
tests/: test_core.c  test_core_internal.c  test_example_decode_capture.c  test_example_pattern_editor.c  test_patch_import_internal.c  test_synth.c  test_synth_internal.c
